# irori

./: .gitignore  CLAUDE.md  Cargo.toml  PROTOCOL.md  README.md  docker-compose.yml
.github/workflows/: cli-ci.yml  marketing-ci.yml  server-ci.yml
cli/: Cargo.toml
cli/src/: main.rs
marketing/: README.md  package.json  tsconfig.json
marketing/src/app/: globals.css  layout.tsx  page.tsx
marketing/src/app/api/docs/: route.ts
server/: Cargo.toml  Dockerfile
server/src/: app.rs  error.rs  lib.rs  main.rs
server/src/api/: health.rs  mod.rs
server/src/core/: config.rs  db.rs  storage.rs
server/src/mcp/: mod.rs
server/src/services/: collections.rs  mod.rs  resources.rs  sharing.rs  sync.rs  users.rs
server/src/services/collections/: mod.rs  models.rs
server/src/services/resources/: mod.rs  models.rs
server/src/services/sharing/: mod.rs  models.rs
server/src/services/sync/: mod.rs  models.rs
server/src/services/users/: mod.rs  models.rs
server/src/util/: id.rs
