[package]
name = "irori-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "hearth"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true }
dotenvy = { workspace = true }
reqwest = { workspace = true }

# CLI utilities
console = "0.15"
dialoguer = "0.11"
indicatif = "0.17"
dirs = "6"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
