[package]
name = "irori-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "hearth"
path = "src/main.rs"

[lib]
name = "hearth"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
utoipa-scalar = { workspace = true }
sqlx = { workspace = true }
dotenvy = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }

# Storage
tokio-util = "0.7"

# Crypto
sha2 = "0.10"
hex = "0.4"
ed25519-dalek = { version = "2", features = ["rand_core"] }
jsonwebtoken = "9"

# Logging & Monitoring (Sentry disabled for now due to dependency conflicts)
# sentry = { version = "0.33", features = ["tower-axum-matched-path", "tracing"] }

# Caching
cached = { version = "0.54", features = ["async"] }

# Utilities
base64 = "0.22"
regex = "1"
url = "2"
futures = "0.3"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
